fix cat buttons alignment. force cat. thumb height

--- a/common/common.scss
+++ b/common/common.scss
@@ -644,8 +644,7 @@ html body.navigation-categories #main-outlet {
 }
 
 // cat. nav. alignment
-.categories-list .navigation-container {
-  border-bottom: 0;
+.navigation-container {
   align-items: flex-start;
 }
 
@@ -655,13 +654,13 @@ html body.navigation-categories #main-outlet {
 }
 
 // force max 2 lines of text for cat descriptions
-// .custom-category-boxes .description {
-//   overflow: hidden;
-//   text-overflow: ellipsis;
-//   display: -webkit-box;
-//   -webkit-line-clamp: 2;
-//   -webkit-box-orient: vertical;
-// }
+.custom-category-boxes .description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
 
 /**
  *
